Created placeholder helper that will handle POST admin/data_sources/website.
